# exsclaim2.0

./: .dockerignore  .gitignore  .template.env  Dockerfile  Dockerfile.build  Dockerfile.exsclaim  Dockerfile.pycharm  LICENSE  MANIFEST.in  Makefile  README.md  app.py  default.env  docker-compose.yaml  docker-compose.yml  docker-entrypoint  docker-healthcheck  entrypoint.sh  jupyter_requirements.txt  load_models.py  pyproject.toml  requirements.txt  run_exsclaim.py  run_exsclaim.sh  setup.py
.git_hooks/: post-commit  pre-commit  update_version  upload_to_pypi
api/: .coveragerc  Dockerfile  README.md  docker-compose.yml  manage.py  mkdocs.yml  wait_for_postgres.py
api/config/: __init__.py  urls.py  wsgi.py
api/docs/: index.md
api/requirements/: base.txt  dev.txt  install_requirements.sh  local.txt  production.txt
dashboard/: Dockerfile  README.md  install_and_run.sh  package-lock.json  package.json  requirements.txt
dashboard/dashboard/: __main__.py  config.py  main.py
dashboard/src/: index.js
db/: Dockerfile  exsclaim-ddl.dot  exsclaim-ddl.uml  setup.sql
db/setup/: api-setup.sql  exsclaim-setup.sql
exsclaim/: README.md  __init__.py  __main__.py  browser.py  caption.py  config.py  exceptions.py  figure.py  journal.py  notifications.py  pdf.py  pipeline.py  tool.py  version.py  version.pyi  visualize_dataset.py
exsclaim/api/: __init__.py  __main__.py  config.py  middleware.py  models.py  settings.py
exsclaim/captions/: __init__.py  ollama_llms.py  openai_llms.py
exsclaim/dashboard/: __init__.py  __main__.py  config.py  package-lock.json  package.json  requirements.txt
fastapi/: Dockerfile  requirements.txt
jupyter/: 3_Microscopy_CLIP_retrieval.ipynb  jupyter_extensions.txt  jupyter_requirements.txt
notebooks/: 1_Nature_exsclaim_search.ipynb  2_HTMLScraper.ipynb  3_Microscopy_CLIP_retrieval.ipynb
query/: nature-ESEM.json
(+132 files in other folders)
