[project]
name = "exsclaim"
version = "2.4.1"
description = "EXSCLAIM! is a library for the automatic EXtraction, Separation, and Caption-based natural Language Annotation of IMages from scientific figures."
authors = [
    { name = "Eric Schwenker, Trevor Spreadbury, Weixin Jiang, Maria Chan, Len Washington III", email = "developer@materialeyes.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Dash",
    "Framework :: FastAPI",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: JavaScript",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Text Processing"
]
requires-python = ">=3.13.2"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://exsclaim.materialeyes.org"
Source = "https://github.com/MaterialEyes/exsclaim2.0"
Documentation = "https://github.com/MaterialEyes/exsclaim2.0/wiki"
Issues = "https://github.com/MaterialEyes/exsclaim2.0/issues"
Paper = "https://arxiv.org/abs/2103.10631"

[project.scripts]
exsclaim = "exsclaim.__main__:main"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["exsclaim", "exsclaim.captions", "exsclaim.figures", "exsclaim.tests", "exsclaim.utilities", "exsclaim.api", "exsclaim.dashboard", "exsclaim.dashboard.components"]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
